fix: text out of screen on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,4 +60,16 @@
   }
 }
 
+label.mat-radio-label {
+  white-space: normal;
+}
+
+.mat-input-placeholder {
+  white-space: normal;
+}
+
+textarea.mat-input-element {
+  padding: 0px 0;
+  margin: 5px 0;
+}
 
